[gd_scene load_steps=5 format=2]

[ext_resource path="res://interactables/interactable_object.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/gfx/bordered_background.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 16.0
content_margin_right = 16.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[node name="InteractableObject" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Tooltip" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -17.5
margin_right = 40.0
margin_bottom = 17.5
theme = ExtResource( 2 )
custom_styles/normal = SubResource( 1 )
text = "TEST"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="." to="." method="_on_InteractableObject_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_InteractableObject_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InteractableObject_mouse_exited"]
